[gd_scene load_steps=13 format=3 uid="uid://bb8i4pgspiu2a"]

[ext_resource type="Script" uid="uid://b6jak65gt0v43" path="res://scenes/radio/radio.gd" id="1_abidj"]
[ext_resource type="Shader" uid="uid://c1yjeko525i7k" path="res://assets/shaders/sharpness.gdshader" id="2_4528s"]
[ext_resource type="Script" uid="uid://bbrg7ckucvxh3" path="res://scenes/radio/v_slider.gd" id="2_dij1w"]
[ext_resource type="Shader" uid="uid://2rb41k14fqto" path="res://assets/shaders/NTSC.gdshader" id="3_di2n6"]
[ext_resource type="Script" uid="uid://c0ltb1woftm2p" path="res://addons/fakeradio/station/station.gd" id="4_81otu"]
[ext_resource type="Texture2D" uid="uid://b6k3ptlw6ejqq" path="res://assets/textures/grain.jpg" id="4_dij1w"]
[ext_resource type="Script" uid="uid://c3wosjtmsj3v" path="res://addons/fakeradio/radio/radio.gd" id="4_u3hxe"]
[ext_resource type="Texture2D" uid="uid://3p2mjtfanwvb" path="res://assets/CRT Frame.png" id="5_p15d1"]
[ext_resource type="AudioStream" uid="uid://bobvkvqryl38y" path="res://music/ambience/car_outside.mp3" id="8_di2n6"]
[ext_resource type="AudioStream" uid="uid://ktwjn2ds72ly" path="res://music/ambience/rain_outside.mp3" id="10_p15d1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4a3tv"]
shader = ExtResource("2_4528s")
shader_parameter/sharpen_amount = 4.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6ve0c"]
shader = ExtResource("3_di2n6")
shader_parameter/blur_amount = 2.086
shader_parameter/signal_quality = 0.072
shader_parameter/bottom_strenth = 1.103
shader_parameter/grain_tex = ExtResource("4_dij1w")

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abidj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="PomodoroContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -152.5
offset_right = 152.5
offset_bottom = 186.0
grow_horizontal = 2

[node name="TimerLabel" type="Label" parent="CanvasLayer/PomodoroContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 140
text = "25:00"

[node name="PlayPauseBtn" type="Button" parent="CanvasLayer/PomodoroContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Pause
"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -235.0
offset_right = 235.0
grow_vertical = 0
theme_override_constants/margin_left = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VSlider" type="HSlider" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
script = ExtResource("2_dij1w")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonPrev" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Prev"

[node name="ButtonNext" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Next"

[node name="LabelRadioName" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LabelRadioDesc" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CarSoundsBtn" type="CheckButton" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 12
text = "Car Sounds"

[node name="RainBtn" type="CheckButton" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Rain
"

[node name="VSlider2" type="HSlider" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
script = ExtResource("2_dij1w")
audio_bus_name = "SFX"

[node name="Effects" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BackBufferCopy" type="BackBufferCopy" parent="CanvasLayer/Effects"]
position = Vector2(578, 322.5)
scale = Vector2(5.78, 3.275)
copy_mode = 2

[node name="Sharpness" type="ColorRect" parent="CanvasLayer/Effects/BackBufferCopy"]
material = SubResource("ShaderMaterial_4a3tv")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BackBufferCopy2" type="BackBufferCopy" parent="CanvasLayer/Effects"]
position = Vector2(577.5, 325)
scale = Vector2(5.795, 3.28)
copy_mode = 2

[node name="NTSC" type="ColorRect" parent="CanvasLayer/Effects/BackBufferCopy2"]
material = SubResource("ShaderMaterial_6ve0c")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Effects"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_p15d1")
expand_mode = 1

[node name="Radio" type="AudioStreamPlayer" parent="."]
bus = &"Music"
script = ExtResource("4_u3hxe")

[node name="MC QUATTRO" type="Node" parent="Radio"]
script = ExtResource("4_81otu")
station_name = "MC QUATTRO"
station_description = "Music by MC QUATTRO"
music_array = PackedStringArray("res://music/mc/MC QUATTRO - bttf.mp3", "res://music/mc/MC QUATTRO - crazy punk.mp3", "res://music/mc/mc-quattro-an-old-music-cassette-retrowawe.mp3", "res://music/mc/mc-quattro-beats-beats-ufo-rage-cyberpunk-2022-13551.mp3")

[node name="ZEZAS" type="Node" parent="Radio"]
script = ExtResource("4_81otu")
station_name = "ZEZAS"
station_description = "Music by ZEAS"
music_array = PackedStringArray("res://music/zezas/80s-retrowave-15134.mp3", "res://music/zezas/80s-synth-futuristic-optimistic-hopeful-music-20597.mp3", "res://music/zezas/into-the-night-80s-retro-synthwave-22160.mp3", "res://music/zezas/retrowave-80s-electronic-retro-beat-257056.mp3", "res://music/zezas/romantic-energetic-synthwave-of-80s-147673.mp3")

[node name="Timer" type="Timer" parent="."]
wait_time = 25.0
one_shot = true

[node name="CarSounds" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_di2n6")
bus = &"SFX"
parameters/looping = true

[node name="RainSounds" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_p15d1")
bus = &"SFX"
parameters/looping = true

[connection signal="pressed" from="CanvasLayer/PomodoroContainer/PlayPauseBtn" to="." method="_on_pause_pressed"]
[connection signal="value_changed" from="CanvasLayer/MarginContainer/VBoxContainer/VSlider" to="CanvasLayer/MarginContainer/VBoxContainer/VSlider" method="_on_value_changed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/ButtonPrev" to="." method="_on_button_prev_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/ButtonNext" to="." method="_on_button_next_pressed"]
[connection signal="toggled" from="CanvasLayer/MarginContainer/VBoxContainer/CarSoundsBtn" to="." method="_on_car_sounds_btn_toggled"]
[connection signal="toggled" from="CanvasLayer/MarginContainer/VBoxContainer/RainBtn" to="." method="_on_rain_btn_toggled"]
[connection signal="value_changed" from="CanvasLayer/MarginContainer/VBoxContainer/VSlider2" to="CanvasLayer/MarginContainer/VBoxContainer/VSlider2" method="_on_value_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
